// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sample.plugin.js should transform example1 correctly 1`] = `
"function abc() {
  console.time(\\"abc\\");

  for (var i = 0; i < 100; i++) {
    console.log(i);
  }

  console.timeEnd(\\"abc\\")
}"
`;

exports[`sample.plugin.js should transform example2 correctly 1`] = `
"function def() {
  console.time(\\"def\\");

  for (var i = 0; i < 100; i++) {
    console.log(i);
  }

  console.timeEnd(\\"def\\")
  return 'done';
}"
`;

exports[`sample.plugin.js should transform example3 correctly 1`] = `
"function joker() {
  console.time(\\"joker\\");

  for (var i = 0; i < 100; i++) {
    console.log(i);

    if (Math.random() < 0.5) {
      console.timeEnd(\\"joker\\")
      return 'abort';
    }
  }

  console.timeEnd(\\"joker\\")
  return 'done';
}"
`;

exports[`sample.plugin.js should transform example4 correctly 1`] = `
"function terrible() {
  console.time(\\"terrible\\");

  function log() {
    console.time(\\"log\\");
    console.timeEnd(\\"log\\")
    return 'log';
  }

  for (var i = 0; i < 100; i++) {
    console.log(i);

    if (Math.random() < 0.5) {
      console.timeEnd(\\"terrible\\")
      return 'abort';
    }
  }

  console.timeEnd(\\"terrible\\")
  return 'done';
}"
`;
